--- a/public/css/header/header.css
+++ b/public/css/header/header.css
@@ -13,7 +13,7 @@ body {
 
 .header {
     
-    background-color:#397FD5;
+    background-color:/*#397FD5*/blue;
     color: white;
     padding: 10px 20px;
     display: flex;
