--- a/public/css/tabela/tabela-responsive.css
+++ b/public/css/tabela/tabela-responsive.css
@@ -88,3 +88,33 @@ margin-right: 20px !important;
     width: 100%; /* Faz o span ocupar 100% da largura da célula */
     font-size: 13px;
 }
+
+.status-andamento {
+    color: white; /* Cor do texto */
+    background-color: rgb(43, 72, 235); /* Cor de fundo para "Inativo" */
+    padding: 5px 10px; /* Espaçamento interno */
+    display: inline-block; /* Para que o padding funcione corretamente */
+    text-align: center; /* Centraliza o texto */
+    width: 100%; /* Faz o span ocupar 100% da largura da célula */
+    font-size: 13px;
+}
+
+.status-recusado {
+    color: white; /* Cor do texto */
+    background-color: rgb(235, 43, 43); /* Cor de fundo para "Inativo" */
+    padding: 5px 10px; /* Espaçamento interno */
+    display: inline-block; /* Para que o padding funcione corretamente */
+    text-align: center; /* Centraliza o texto */
+    width: 100%; /* Faz o span ocupar 100% da largura da célula */
+    font-size: 13px;
+}
+
+.status-finalizado {
+    color: white; /* Cor do texto */
+    background-color: rgb(51, 170, 51); /* Cor de fundo para "Ativo" */
+    padding: 5px 10px; /* Espaçamento interno */
+    display: inline-block; /* Para que o padding funcione corretamente */
+    text-align: center; /* Centraliza o texto */
+    width: 100%; /* Faz o span ocupar 100% da largura da célula */
+    font-size: 13px;
+}
