--- a/public/css/header/body.css
+++ b/public/css/header/body.css
@@ -6,7 +6,7 @@
 body {
     font-family: 'Montserrat', sans-serif;
     margin-top: 100px;
-    background-color: #ecf0f1;
+    background-color: #EDF2F6;
 
     overflow-x: hidden; 
     transition: margin-left 0.3s ease; 
