--- a/public/css/tabela/tabela-responsive.css
+++ b/public/css/tabela/tabela-responsive.css
@@ -118,3 +118,12 @@ margin-right: 20px !important;
     width: 100%; /* Faz o span ocupar 100% da largura da célula */
     font-size: 13px;
 }
+.status-cancelado {
+    color: white; /* Cor do texto */
+    background-color: rgb(100, 11, 85); /* Cor de fundo para "Ativo" */
+    padding: 5px 10px; /* Espaçamento interno */
+    display: inline-block; /* Para que o padding funcione corretamente */
+    text-align: center; /* Centraliza o texto */
+    width: 100%; /* Faz o span ocupar 100% da largura da célula */
+    font-size: 13px;
+}
