--- a/public/css/header/header.css
+++ b/public/css/header/header.css
@@ -93,6 +93,13 @@ body.sidebar-open {
 hr{
     margin: 0;
 }
+
+.sair-icon{
+    position: fixed; 
+    top: 8px; 
+    right: 20px; 
+    z-index: 3;
+}
 /* Media query para telas menores */
 @media screen and (max-width: 1425px) {
     .header {
@@ -104,37 +111,37 @@ hr{
         margin-top: 60px;
         margin-left: 0;
     } 
-    .content {
-        margin-left: 0;
-        padding: 20px;
-    }
     .main-div {
         margin: 20px auto !important;
     }
 
+}
+@media (min-width: 768px) {
+    .sair-icon {
+        left: 300px; 
+        top: 10px; 
+        position: fixed; 
+        flex-direction: row; 
+        justify-content: flex-end;
+    }
 }      
 
-.sair-icon{
-    position: fixed; 
-    top: 8px; 
-    right: 20px; 
-    z-index: 3;
-}
-@media (max-width: 468px) {
-    .sair-icon {
-        position: fixed; 
-        top: 1px; 
-        left: 300px; 
-        flex-direction: row; 
-        justify-content: flex-end;
+
+@media (max-width: 768px) {
+    .sidebar {
+        left: -250px; /* Oculta a sidebar no mobile */
     }
-}
-@media (max-width: 430px) {
-    .sair-icon {
-        position: fixed; 
-        top: 1px; 
-        left: 400px; 
-        flex-direction: row; 
-        justify-content: flex-end;
+    .sidebar.open {
+        left: 0; /* Mostra a sidebar ao abrir */
     }
+    /* Ajuste de margens para conteúdo e header no mobile */
+    .header {
+        margin-left: 0;
+    }
+
 }
+
+
+
+
+
