--- a/public/css/header/header.css
+++ b/public/css/header/header.css
@@ -35,6 +35,7 @@
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     transition: left 0.3s ease;
     z-index: 2;
+    overflow-y: auto;
 } 
 .sidebar.open {
     left: 0;
